--- a/pom.xml
+++ b/pom.xml
@@ -1,123 +1,133 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">  
-  <modelVersion>4.0.0</modelVersion>  
-  <groupId>RestService</groupId>  
-  <artifactId>MyRestApp</artifactId>  
-  <packaging>war</packaging>  
-  <version>1.0-SNAPSHOT</version>  
-  <name>MyRestApp Jersey Webapp</name>  
-  <build> 
-    <finalName>MyRestApp</finalName>  
-    <plugins> 
-      <plugin> 
-        <groupId>org.apache.tomcat.maven</groupId>  
-        <artifactId>tomcat7-maven-plugin</artifactId>  
-        <version>2.2</version>  
-        <configuration> 
-          <!-- http port needed in the sandbox is 8000 -->  
-          <port>8000</port> 
-        </configuration> 
-      </plugin>  
-      <plugin> 
-        <groupId>org.apache.maven.plugins</groupId>  
-        <artifactId>maven-compiler-plugin</artifactId>  
-        <inherited>true</inherited>  
-        <configuration> 
-          <source>1.6</source>  
-          <target>1.6</target> 
-        </configuration> 
-      </plugin>  
-      <!-- Run the application using "mvn embedded-glassfish:run" -->  
-      <plugin> 
-        <groupId>org.glassfish</groupId>  
-        <artifactId>maven-embedded-glassfish-plugin</artifactId>  
-        <version>${glassfish.version}</version>  
-        <configuration> 
-          <goalPrefix>embedded-glassfish</goalPrefix>  
-          <app>/home/chao/target/${project.build.finalName}.war</app>  
-          <autoDelete>true</autoDelete>  
-          <port>8080</port> 
-        </configuration>  
-        <dependencies> 
-          <dependency> 
-            <groupId>com.sun.jersey</groupId>  
-            <artifactId>jersey-servlet</artifactId>  
-            <version>${project.version}</version> 
-          </dependency>  
-          <dependency> 
-            <groupId>javax.servlet</groupId>  
-            <artifactId>javax.servlet-api</artifactId>  
-            <version>3.0.1</version> 
-          </dependency> 
-        </dependencies> 
-      </plugin>  
-      <plugin> 
-        <groupId>com.microsoft.azure</groupId>  
-        <artifactId>azure-webapp-maven-plugin</artifactId>  
-        <version>2.2.0</version>  
-        <configuration> 
-          <!-- Deploy Web App to the existing App Service Plan -->  
-          <appServicePlanResourceGroup>${PLAN_RESOURCEGROUP_NAME}</appServicePlanResourceGroup>  
-          <appServicePlanName>${PLAN_NAME}</appServicePlanName>  
-          <schemaVersion>v2</schemaVersion>  
-          <subscriptionId>4a799768-6240-4a4e-b437-2ecba5fe11f9</subscriptionId>  
-          <resourceGroup>MyRestApp-1672094419392-rg</resourceGroup>  
-          <appName>MyRestApp-1672094419392</appName>  
-          <pricingTier>P1v2</pricingTier>  
-          <region>centralus</region>  
-          <runtime> 
-            <os>Linux</os>  
-            <javaVersion>Java 8</javaVersion>  
-            <webContainer>Tomcat 8.5</webContainer> 
-          </runtime>  
-          <deployment> 
-            <resources> 
-              <resource> 
-                <directory>${project.basedir}/target</directory>  
-                <includes> 
-                  <include>*.war</include> 
-                </includes> 
-              </resource> 
-            </resources> 
-          </deployment> 
-        </configuration> 
-      </plugin> 
-    </plugins> 
-  </build>  
-  <dependencies> 
-    <dependency> 
-      <groupId>com.sun.jersey</groupId>  
-      <artifactId>jersey-servlet</artifactId>  
-      <version>${jersey.version}</version> 
-    </dependency>  
-    <dependency> 
-      <groupId>com.sun.jersey</groupId>  
-      <artifactId>jersey-json</artifactId>  
-      <version>${jersey.version}</version> 
-    </dependency>  
-    <dependency> 
-      <groupId>junit</groupId>  
-      <artifactId>junit</artifactId>  
-      <version>4.8.2</version>  
-      <scope>test</scope> 
-    </dependency>  
-    <dependency> 
-      <groupId>com.sun.jersey</groupId>  
-      <artifactId>jersey-client</artifactId>  
-      <version>${jersey.version}</version>  
-      <scope>test</scope> 
-    </dependency>  
-    <dependency> 
-      <groupId>org.glassfish.extras</groupId>  
-      <artifactId>glassfish-embedded-web</artifactId>  
-      <version>${glassfish.version}</version>  
-      <scope>test</scope> 
-    </dependency> 
-  </dependencies>  
-  <properties> 
-    <jersey.version>1.19.4</jersey.version>  
-    <glassfish.version>3.1.1</glassfish.version>  
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
-  </properties> 
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>RestService</groupId>
+	<artifactId>MyRestApp</artifactId>
+	<packaging>war</packaging>
+	<version>1.0-SNAPSHOT</version>
+	<name>MyRestApp Jersey Webapp</name>
+	<build>
+		<finalName>MyRestApp</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<!-- http port needed in the sandbox is 8000 -->
+					<port>8000</port>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<inherited>true</inherited>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<!-- Run the application using "mvn embedded-glassfish:run" -->
+			<plugin>
+				<groupId>org.glassfish</groupId>
+				<artifactId>maven-embedded-glassfish-plugin</artifactId>
+				<version>${glassfish.version}</version>
+				<configuration>
+					<goalPrefix>embedded-glassfish</goalPrefix>
+					<app>/home/chao/target/${project.build.finalName}.war</app>
+					<autoDelete>true</autoDelete>
+					<port>8080</port>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>com.sun.jersey</groupId>
+						<artifactId>jersey-servlet</artifactId>
+						<version>${project.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>javax.servlet</groupId>
+						<artifactId>javax.servlet-api</artifactId>
+						<version>3.0.1</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>com.microsoft.azure</groupId>
+				<artifactId>azure-webapp-maven-plugin</artifactId>
+				<version>2.2.0</version>
+				<configuration>
+					<!-- Deploy Web App to the existing App Service Plan -->
+					<appServicePlanResourceGroup>${PLAN_RESOURCEGROUP_NAME}</appServicePlanResourceGroup>
+					<appServicePlanName>${PLAN_NAME}</appServicePlanName>
+					<schemaVersion>v2</schemaVersion>
+					<subscriptionId>4a799768-6240-4a4e-b437-2ecba5fe11f9</subscriptionId>
+					<resourceGroup>MyRestApp-1672094419392-rg</resourceGroup>
+					<appName>MyRestApp-1672094419392</appName>
+					<pricingTier>P1v2</pricingTier>
+					<region>centralus</region>
+					<runtime>
+						<os>Linux</os>
+						<javaVersion>Java 8</javaVersion>
+						<webContainer>Tomcat 8.5</webContainer>
+					</runtime>
+					<deployment>
+						<resources>
+							<resource>
+								<directory>${project.basedir}/target</directory>
+								<includes>
+									<include>*.war</include>
+								</includes>
+							</resource>
+						</resources>
+					</deployment>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<dependencies>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-servlet</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-json</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>${jersey.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.extras</groupId>
+			<artifactId>glassfish-embedded-web</artifactId>
+			<version>${glassfish.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>7.0.0.jre8</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10</version>
+		</dependency>
+	</dependencies>
+	<properties>
+		<jersey.version>1.19.4</jersey.version>
+		<glassfish.version>3.1.1</glassfish.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 </project>
